# nn_from_scratch2

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/activation_functions/: ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h
src/base/: CriterionBase.h  CriterionInterface.h  CriterionTypeErasure.h  ModuleBase.h  ModuleInterface.h  ModuleTypeErasure.h  OptimizerBase.h  OptimizerInterface.h  OptimizerTypeErasure.h
src/criterion/: CrossEntropyLoss.cpp  CrossEntropyLoss.h  MSE.cpp  MSE.h
src/criterions/: CrossEntropyLoss.cpp  CrossEntropyLoss.h  MAE.cpp  MAE.h  MSE.cpp  MSE.h
src/layers/: LinearLayer.cpp  LinearLayer.h  Sequential.cpp  Sequential.h
src/optimizers/: SGD.cpp  SGD.h
src/utils/: DataProcessing.cpp  DataProcessing.h
